// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WrapperComponent allows custom layouts 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      class="combobox-wrapper"
    >
      <div
        aria-controls="id_listbox"
        aria-readonly="true"
        class="dropdown__combobox"
        id="id"
        role="combobox"
        tabindex="0"
      >
        foo
      </div>
    </div>
    <div
      class="listbox-wrapper"
    >
      <ul
        class="dropdown__listbox"
        hidden=""
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="dropdown__option"
          id="id_option_foo"
          role="option"
          tabindex="-1"
        >
          <div>
            foo
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`options as array of objects disabled sets the aria-disabled attribute 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-activedescendant="id_option_apple"
      aria-controls="id_listbox"
      aria-expanded="true"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      aria-activedescendant="id_option_apple"
      class="react-combo-boxes-listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-disabled="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects group renders grouped options 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-hidden="true"
        class="react-combo-boxes-listbox__group-label"
      >
        Citrus
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Citrus
        </div>
        Orange
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_lemon"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Citrus
        </div>
        Lemon
      </li>
      <li
        aria-hidden="true"
        class="react-combo-boxes-listbox__group-label"
      >
        Berry
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Berry
        </div>
        Raspberry
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Berry
        </div>
        Strawberry
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects label renders a closed drop down 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as array of numbers renders a closed drop down 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      0
    </div>
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_0"
        role="option"
        tabindex="-1"
      >
        0
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_1"
        role="option"
        tabindex="-1"
      >
        1
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_2"
        role="option"
        tabindex="-1"
      >
        2
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_3"
        role="option"
        tabindex="-1"
      >
        3
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as array of strings renders a closed drop down 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as null renders a closed drop down with the option as an empty string 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
       
    </div>
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_"
        role="option"
        tabindex="-1"
      >
        
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as undefined renders a closed drop down with the option as an empty string 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
       
    </div>
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_"
        role="option"
        tabindex="-1"
      >
        
      </li>
    </ul>
  </div>
</div>
`;

exports[`options updating options updates the options 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-activedescendant="id_option_strawberry"
      aria-controls="id_listbox"
      aria-expanded="true"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Strawberry
    </div>
    <ul
      aria-activedescendant="id_option_strawberry"
      class="react-combo-boxes-listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        Strawberry
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        Raspberry
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
    </ul>
  </div>
</div>
`;

exports[`placeholder renders a placeholder option 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Please select…
    </div>
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_placeholder"
        role="option"
        tabindex="-1"
      >
        Please select…
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
  </div>
</div>
`;
